--- a/404.html
+++ b/404.html
@@ -11,9 +11,9 @@
       type="image/x-icon"
       href="https://user-images.githubusercontent.com/9554297/83762004-a0761b00-a6a9-11ea-83b4-9c8ff721d4b8.png"
     />
-    <link rel="stylesheet" href="/kyong-ui/umi.css" />
+    <link rel="stylesheet" href="/Kyong-UI/umi.css" />
     <script>
-      window.routerBase = "/kyong-ui/";
+      window.routerBase = "/Kyong-UI/";
     </script>
     <script>
       //! umi version: 3.5.36
@@ -36,6 +36,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/kyong-ui/umi.js"></script>
+    <script src="/Kyong-UI/umi.js"></script>
   </body>
 </html>
