--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="/Kyong-UI/umi.css" />
     <script>
-      window.routerBase = "/Kyong-UI/";
+      window.routerBase = "/Kyong-UI";
     </script>
     <script>
       //! umi version: 3.5.36
